[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/personnage/personnage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/jeuhelper/MapGlobal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/jeuhelper/PlateformeDefault.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/jeu/Jeu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/plateforme/plateformeDrapeau.tscn" type="PackedScene" id=5]

[node name="Jeu" type="Node2D"]
script = ExtResource( 4 )

[node name="MapGlobal" parent="." instance=ExtResource( 2 )]

[node name="Personnage" parent="." instance=ExtResource( 1 )]
position = Vector2( 416.634, 145.407 )
scale = Vector2( 1, 1 )
vitesse = 450
gravite = 60

[node name="Vue" type="Camera2D" parent="."]
position = Vector2( 511.741, 253.676 )
current = true

[node name="MapPremierSaut" parent="." instance=ExtResource( 3 )]
position = Vector2( 9.54599, -99.5964 )

[node name="SautFinal" parent="." instance=ExtResource( 5 )]
position = Vector2( 200.261, -388.057 )

[node name="PositionXMin" type="Position2D" parent="."]
position = Vector2( 196.238, -351.216 )

[node name="PositionXMax" type="Position2D" parent="."]
position = Vector2( 807.243, -379.404 )
